# tinyrenderer

./: .gitignore  meson.build  wireframe.ppm
include/: camera.hpp  color.hpp  image.hpp  matrix.hpp  model.hpp  shapes.hpp  vector.hpp  zbuffer.hpp
source/: camera.cpp  color.cpp  image.cpp  main.cpp  model.cpp  shapes.cpp  zbuffer.cpp
